Fix random resizing/scrollbar

--- a/packages/ui/src/styles.scss
+++ b/packages/ui/src/styles.scss
@@ -13,6 +13,12 @@ html {
   background: #222 !important;
 }
 
+body {
+  height: 100vh;
+  width: 100vw;
+  overflow: auto;
+}
+
 // Global font size
 $body-size: 15px;
 
